@@ -44,8 +44,6 @@ class DatajsonHarvestMigration extends HarvestMigration {
     $this->addFieldMapping('uuid', 'identifier');
     $this->addFieldMapping('field_license', 'license');
     $this->addFieldMapping('field_spatial_geographical_cover', 'spatial');
-    $this->addFieldMapping('field_temporal_coverage', 'temporalBegin');
-    $this->addFieldMapping('field_temporal_coverage:to', 'temporalEnd');
     $this->addFieldMapping('field_frequency', 'accrualPeriodicity');
     $this->addFieldMapping('field_data_dictionary', 'describedBy');
     $this->addFieldMapping('field_landing_page', 'landingPage');
@@ -97,6 +95,64 @@ class DatajsonHarvestMigration extends HarvestMigration {
         $row->contact_email = '';
       }
     }
+
+    // Process Temporal Coverage. The mapping are defined in the base main
+    // class, we just need to set the properties.
+    if (isset($row->temporal)) {
+      $date = explode("/", $row->temporal);
+
+      foreach ($date as $key => &$value) {
+        // Check if this is a time interval on the second Argument.
+        if ($key == 1
+          && preg_match("/P(\d*Y)?(\d*M)?(\d*D)?(\d*W)?T?(\d*H)?(\d*M)?(\d*S)?/", $value)) {
+          try {
+            $value_diff = new DateInterval($value);
+            // Get the date from the first segment. This should be represented
+            // as a timestamp by now.
+            $value_date = new DateTime();
+            $value_date->setTimestamp($date[0]);
+            $value_date->add($value_diff);
+          }
+          catch (Exception $e) {
+            $message = t(
+              'Cannot parse temporal coverage interval @value',
+              array(
+                '@value' => $value,
+              ));
+            $this->saveMessage($message);
+          }
+        }
+        // Support 4 digits year time strings.
+        elseif (preg_match("@^\d{4}$@", $value)) {
+          $value_date = new DateTime();
+          $value_date->setDate($value, 1, 1)
+            ->setTime(0, 0);
+        }
+        // Fallback to full date/time format.
+        else {
+          try {
+            $value_date = new DateTime($value);
+          }
+          catch (Exception $e) {
+            $message = t(
+              'Cannot parse temporal coverage value @value',
+              array(
+                '@value' => $value,
+              ));
+            $this->saveMessage($message);
+          }
+        }
+
+        $value = $value_date->getTimestamp();
+      }
+
+      if (isset($date[0])) {
+        $row->temporal_coverage_from = $date[0];
+      }
+      if (isset($date[1])) {
+        $row->temporal_coverage_to = $date[1];
+      }
+    }
   }
 
   /**
@@ -118,10 +174,10 @@ class DatajsonHarvestMigration extends HarvestMigration {
    * Prepare list of resources that need to be imported based on the row data.
    *
    * @param object $resources_row_data
-   *        Resources data present on row.
+   *   Resources data present on row.
    *
    * @return array
-   *         An array with all resources data ready to be imported or empty if
+   *   An array with all resources data ready to be imported or empty if
    *         no resources where found.
    */
   public function prepareRowResources($resources_row_data) {
@@ -146,10 +202,10 @@ class DatajsonHarvestMigration extends HarvestMigration {
    * Prepare group that needs to be imported based on the row data.
    *
    * @param object $group_row_data
-   *        $group_row_data Group data present on row.
+   *   $group_row_data Group data present on row.
    *
    * @return object
-   *         An object value with the group data needed to import the group.
+   *   An object value with the group data needed to import the group.
    */
   public function prepareRowGroup($group_row_data) {
 
